--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,27 +23,33 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
+      - name: Upgrade pip and install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install rich
 
       - name: Syntax check Obfuscator
-        run: |
-          python -m py_compile Obfuscator_ToolV2.py
+        run: python -m py_compile Obfuscator_ToolV2.py
 
       - name: Create dummy script for testing
         run: |
           echo 'print("Hello from test script")' > test_script.py
 
-      - name: Test Obfuscation
+      - name: Run obfuscation for all levels
         run: |
-          python Obfuscator_ToolV2.py << EOF
+          for level in 1 2 3 4
+          do
+            OUTPUT_FILE="obfuscated_test_level${level}.py"
+            echo "Testing obfuscation level $level"
+            python Obfuscator_ToolV2.py << EOF
 test_script.py
-obfuscated_test.py
-1
+$OUTPUT_FILE
+$level
 EOF
+            # Run the obfuscated script to make sure it works
+            python $OUTPUT_FILE
+          done
 
-      - name: Run obfuscated script
+      - name: Clean up test files
         run: |
-          python obfuscated_test.py
+          rm -f test_script.py obfuscated_test_level*.py
